--- a/src/style.css
+++ b/src/style.css
@@ -40,13 +40,13 @@ textarea{
     margin: 20px;
 }
 h1{
-    font-family: 'Coda Caption', sans-serif;
-    font-size: 60px;
+    font-family: 'arial', sans-serif;
+    font-size: 50;
 }
 input{
     margin: 20px;
-    font-size: 23px;
-    font-weight: 300;
+    font-size: 18px;
+    font-weight: 100;
 }
 button{
     border-radius: 10px;
@@ -54,24 +54,26 @@ button{
     font-weight: 900;
 }
 label{
-    font-size: 15px;
-    font-weight: 800;
+    font-size: 16px;
+    font-weight: 800
 }
     
 #numOffset{
-    width: 71px;
+    width: 55px;
     margin: 20px;
     font-size: 23px;
     font-weight: 300;
-    height: 44px;
+    height: 34px;
+    border: solid;
 
 }
 #numOffset1{
-    width: 71px;
+    width: 55px;
     margin: 20px;
     font-size: 23px;
     font-weight: 300;
-    height: 44px;
+    height: 34px;
+    border: solids;
 }
 
 /* #pag1{
@@ -80,6 +82,3 @@ label{
     font-family: Arial, Helvetica, sans-serif;
     font-size: larger;
 } */
-.img {
-height: 150px;
-}
